<resources>
    <string name="app_name">calculadora_de_notas</string>
    <string name="titleApp">CALCULADORA IMD</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMulti">X</string>
    <string name="buttonDiv">/</string>
    <string name="buttonDEL">Del</string>
    <string name="buttonResult">=</string>
    <string name="credits">Desenvolvido por Eduardo Santos</string>
    <string name="fragment1">Calculadora</string>
    <string name="fragment2">Notas</string>
    <string name="notasTitle">Calcule sua Média</string>
    <string name="situacao" >Situação:</string>
    <string name="calcular">Calcular</string>
    <string name="inserirNota">Insira a nota da U1</string>
    <string name="inserirNota2">Insira a nota da U2</string>
    <string name="inserirNota3">Insira a nota da U3</string>
</resources>