<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/titleApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="409dp"
        android:layout_height="598dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/credits2"
                android:layout_width="221dp"
                android:layout_height="16dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/credits"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.989" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <View
        android:id="@+id/header"
        android:layout_width="414dp"
        android:layout_height="83dp"
        android:background="@color/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/headerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleApp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="@+id/header"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/header"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="0.336" />

    <Button
        android:id="@+id/button16"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:background="@color/header"
        android:onClick="inciarNotas"
        android:text="@string/fragment2"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button15"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:background="@color/header"
        android:onClick="iniciarCalculadora"
        android:text="@string/fragment1"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>